--- a/style.css
+++ b/style.css
@@ -36,6 +36,19 @@ body {
     align-items: center;
 }
 
+.content-section-wide-dark {
+    background-color: rgba(0, 0, 0, 0.7); 
+    padding: 20px;
+    margin: 50px auto;
+    width: 80%; 
+/*    max-width: 1000px; */
+    border-radius: 0px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
+}
+
 .content-section {
     background-color: rgba(255, 255, 255, 0.85); 
     padding: 20px;
@@ -73,7 +86,7 @@ body {
 
 .button-grid-compact {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); 
+    grid-template-columns: repeat(2, 1fr); 
     gap: 60px 100px; 
     align-items: center; 
     justify-content: center;
@@ -193,7 +206,7 @@ body {
 }
 
 .thumbnail {
-    width: 300px;
+    width: auto;
     height: 300px;
     object-fit: cover;
     cursor: pointer;
