--- a/style.css
+++ b/style.css
@@ -154,46 +154,6 @@ body {
     display: none; /* Default to hidden */
 }
 
-/* ---------- Change stuff when windows is narrow (ie mobile) ---------- */
-
-@media (max-width: 768px) {
-    body {
-        font-size: 18px;
-    }
-    .content-section-title {
-        padding: 10px;
-        margin: 50px auto;
-        width: 90%;
-    }
-    .content-section {
-        padding: 10px;
-        margin: 50px auto;
-        width: 90%;
-    }
-    .header-image {
-        width: 90%;
-        height: auto;
-    }
-    .button-grid{
-        grid-template-columns: repeat(1, 1fr);
-        gap: 60px 160px; 
-    }
-    .headingText {
-        display: block;
-        text-align: center;
-        margin-bottom: 10px; /* Space between heading and image */
-        font-size: 22px; /* Adjust font size as needed */
-        font-weight: bold;
-    }
-    .randomColorButton::after {
-        display: none;
-    }
-    .randomColorButton:hover::after {
-        display: none;
-    }
-}
-
-
 /* ---------- here is the stuff for paging gallery ---------- */
 
 .gallery {
@@ -294,5 +254,45 @@ body {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
+/* ---------- Change stuff when windows is narrow (ie mobile) ---------- */
 
-/* ---------- end paging gallery ---------- */
+@media (max-width: 768px) {
+    body {
+        font-size: 18px;
+    }
+    .content-section-title {
+        padding: 10px;
+        margin: 50px auto;
+        width: 90%;
+    }
+    .content-section {
+        padding: 10px;
+        margin: 50px auto;
+        width: 90%;
+    }
+    .header-image {
+        width: 90%;
+        height: auto;
+    }
+    .button-grid{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 60px 160px; 
+    }
+    .headingText {
+        display: block;
+        text-align: center;
+        margin-bottom: 10px; /* Space between heading and image */
+        font-size: 22px; /* Adjust font size as needed */
+        font-weight: bold;
+    }
+    .randomColorButton::after {
+        display: none;
+    }
+    .randomColorButton:hover::after {
+        display: none;
+    }
+    .thumbnail {
+        width: 300px;
+        height: auto;
+    }
+}
