--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
 
 .button-grid-footer {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); 
+    grid-template-columns: repeat(3, 1fr); 
     gap: 60px 100px; 
     align-items: center; 
     justify-content: center;
@@ -268,7 +268,7 @@ body {
     .content-section {
         padding: 10px;
         margin: 50px auto;
-        width: 90%;
+        width: 80%;
     }
     .header-image {
         width: 90%;
@@ -276,13 +276,17 @@ body {
     }
     .button-grid{
         grid-template-columns: repeat(1, 1fr);
-        gap: 60px 160px; 
+        gap: 30px 60px; 
+    }
+    .button-grid-footer{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 10px 60px; 
     }
     .headingText {
         display: block;
         text-align: center;
         margin-bottom: 10px; /* Space between heading and image */
-        font-size: 22px; /* Adjust font size as needed */
+        font-size: 22px; 
         font-weight: bold;
     }
     .randomColorButton::after {
