--- a/style.css
+++ b/style.css
@@ -7,59 +7,57 @@ body {
     background-size: auto;
     background-size: 250px 250px;
     background-attachment: fixed;
-    font-size: 18px;
-/*    font-family: "Comic Sans MS", "Comic Sans", cursive;*/
-    font-family: "PT Sans";
+    font-size: 12px;
+    font-family: "Roboto Mono", monospace;
 }
 
-.header-image {
-    width: 500px; 
-    height: 50px; 
+a {
+    color: rgba(0, 150, 200, 1);
+    text-decoration: none;
 }
 
-.content-section-full {
-    background-color: rgba(255, 255, 255, 0.85); 
-    padding: 20px;
-    margin: 50px auto;
+a:hover {
+    color: rgba(0, 200, 255, 1);
 }
 
-.content-section-wide {
-    background-color: rgba(255, 255, 255, 0.85); 
-    padding: 20px;
-    margin: 50px auto;
-    width: 80%; 
-    max-width: 1000px; 
-    border-radius: 0px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    display: flex; 
-    flex-direction: column; 
-    align-items: center;
-}
-
-.content-section-wide-dark {
-    background-color: rgba(0, 0, 0, 0.7); 
-    padding: 20px;
-    margin: 50px auto;
-    width: 80%; 
-/*    max-width: 1000px; */
-    border-radius: 0px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    display: flex; 
-    flex-direction: column; 
-    align-items: center;
+.heading-text  {
+    background-color: rgba(60, 60, 60, 0.7);
+    color: white; 
+    font-size: 22px; 
+    margin-top: 10px;
+/*    font-weight: bold; */
+    padding: 5px 15px;
+    border-radius: 5px;
+/*    -webkit-text-stroke-width: 2px; */
+/*    -webkit-text-stroke-color: black; */
 }
 
 .content-section {
-    background-color: rgba(255, 255, 255, 0.85); 
-    padding: 20px;
-    margin: 50px auto;
+    background-color: rgba(255, 255, 255, 1); 
+    background-color: none; 
+    padding: 40px 80px;
+    margin: 0px auto;
     width: 80%; 
     max-width: 700px; 
     border-radius: 0px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+/*    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     display: flex; 
     flex-direction: column; 
-    align-items: center;
+    align-items: flex-start;
+/*    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+/*    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+}
+
+.content-section-home {
+    margin-top: -1.5em; 
+    max-width: 1000px; 
+    background-color: transparent;
+}
+
+.ufo-section {
+    background-color: rgba(255, 255, 255, 1);
+    padding-top: 20px; 
+    padding-bottom: 0px; 
 }
 
 .thin-paragraph {
@@ -77,21 +75,21 @@ body {
 
 .button-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    gap: 80px 160px; 
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 20px 20px; 
     align-items: center; 
     justify-content: center;
     place-items: center;
 }
 
-.button-grid-compact {
+/*.button-grid-compact {
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
     gap: 60px 100px; 
     align-items: center; 
     justify-content: center;
     place-items: center;
-}
+}*/
 
 .button-grid-footer {
     display: grid;
@@ -108,8 +106,8 @@ body {
 }
 
 .randomColorButton {
-    background-color: none; 
-    border: none;
+    background-color: rgba(255, 255, 255, 0.9); 
+    border: 2px solid grey;
     color: black;
     text-align: center;
     text-decoration: none;
@@ -119,10 +117,31 @@ body {
     height: 130px;
     width: 130px;
     font-size: 24px;
-    border-radius: 0px;
+    border-radius: 10px;
     transition: background-color 0.3s ease;
     overflow: visible;
     position: relative;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5); 
+/*    margin-bottom: 20px;*/
+}
+
+.homeButton {
+    background-color: rgba(255, 255, 255, 0.9); 
+    border: 2px solid grey;
+    color: black;
+    text-align: left;
+    text-decoration: none;
+    display: flex;
+/*    flex-direction: column;*/
+    align-items: left;
+    justify-content: left;
+    height: 70px;
+    width: 350px;
+    max-width: 400px;
+    border-radius: 10px;
+    
+    padding: 1em;
+/*    vertical-align: top;*/
 }
 
 .randomColorButton img {
@@ -144,10 +163,15 @@ body {
     opacity: 0;
     transition: opacity 0.3s;
     white-space: nowrap; 
+    font-color: white;
+}
+
+.randomColorButton:hover {
+    color: purple; 
 }
 
 .randomColorButton:hover::after {
-    opacity: 1; 
+    opacity: 0; 
 }
 
 .headingText {
@@ -186,7 +210,7 @@ body {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.8);
+/*    background-color: rgba(0, 0, 0, 0.8);*/
     align-items: center;
     justify-content: center;
 }
@@ -256,27 +280,27 @@ body {
 
 /* ---------- Change stuff when windows is narrow (ie mobile) ---------- */
 
-@media (max-width: 768px) {
-    body {
-        font-size: 18px;
+@media (max-width: 930px) {
+    .button-grid{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px 20px; 
     }
-    .content-section-title {
-        padding: 10px;
-        margin: 50px auto;
-        width: 90%;
+}
+@media (max-width: 768px) {
+    .heading {
+        padding: 20px 20px;
+        width: 80%;
     }
     .content-section {
-        padding: 10px;
-        margin: 50px auto;
+        padding: 20px 20px;
         width: 80%;
+    }
+    .content-section-home {
+        margin-top: 0em; 
     }
     .header-image {
         width: 90%;
         height: auto;
-    }
-    .button-grid{
-        grid-template-columns: repeat(1, 1fr);
-        gap: 30px 60px; 
     }
     .button-grid-footer{
         grid-template-columns: repeat(1, 1fr);
